# early-ble-testing-nucleo-wb55rg

./: CMakeLists.txt  Kconfig  prj.conf
src/: ble.c  ble_iso.c  ble_services.c  ble_services_vnd.c  ble_services_vnd.h  main.c  usb.c
src/audio/: ble_audio.c
src/iso/: ble_iso.c
